--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/50448379" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     Hello!
+    <div>ghbdtn</div>
+    <div>fghhjjj</div>
 </body>
 </html>
