--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <form action="https://formspree.io/kosskill@gmail.com" method="POST">
+        <form action="https://formspree.io/kosskill2011@gmail.com" method="POST">
             <fieldset>
                 <legend><span class="number">1</span>Zapisz / Zapytaj się o kurs</legend>
                 <input type="text" name="name" placeholder="Imię *">
