--- a/index.html
+++ b/index.html
@@ -3,175 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Document</title>
-    <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Mali:400,700" rel="stylesheet">
 </head>
 
 <body>
-    <!------Top_1 :))   ------>
-    <div class="row invisible">
-        <div class="col-4 text-center">
-            <span class="fab fa-react fa-5x text-warning pr-3" aria-hidden="true"></span>
+
+    
+    <div id="bg"></div>
+        <div id="text-position">
+            <h3>I AM THE BEST</h3>
+            <h1>FRONT END DEVELOPER</h1>
         </div>
-        <div class="col-4 text-center">
-            <span class="fab fa-git fa-5x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-        <div class="col-4 text-center">
-            <span class="fab fa-wordpress fa-5x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-    </div>
-    <div class="row invisible">
-        <div class="col-4 text-center">
-            <span class="fab fa-react fa-5x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-        <div class="col-4 text-center">
-            <span class="fab fa-git fa-5x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-        <div class="col-4 text-center">
-            <span class="fab fa-wordpress fa-5x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-    </div>
-    <div class="row invisible">
-        <div class="col-4 text-center">
-            <span class="fab fa-react fa-1x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-        <div class="col-4 text-center">
-            <span class="fab fa-git fa-1x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-        <div class="col-4 text-center">
-            <span class="fab fa-wordpress fa-1x text-warning pr-3" aria-hidden="true"></span>
-        </div>
-    </div>
-    <!------Top_1 :))   ------>
 
-    <h1 class="text-center">My skills</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-4 invisible">
-                <p class="border-bottom"></p>
-            </div>
-            <!------Top_2 :))   ------>
-            <div class="col-4">
-                <h1 class="border-bottom text-center">
-                    <h2 class="mb-1 text-center invisible">..</h2>
-                </h1>
-            </div>
-            <div class="col-4 invisible">
-                <p class="border-bottom"></p>
-            </div>
-            <!------Top_2 :))   ------>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row ">
-
-            <div class="d-none col-md-4 col-sm-6 col-xs-12 d-md-block text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fas fa-code"></i>-->
-                    <ion-icon class="pb-4 pt-4 px-4 bg-light rounded-circle" name="logo-html5"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">HTML5(new)</p>
-                </span>
-            </div>
-            <div class="d-none col-md-4 col-sm-6 col-xs-12 d-md-block text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fab fa-css3"></i>-->
-                    <ion-icon class="pb-4 pt-4 px-4 bg-light rounded-circle" name="logo-css3"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">CSS3(new)</p>
-                </span>
-            </div>
-            <div class="d-none col-md-4 col-sm-6 col-xs-12 d-md-block text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fab fa-js-square"></i>-->
-                    <ion-icon class="pb-4 pt-4 px-4 bg-light rounded-circle" name="logo-javascript"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">JsvaScript(new)</p>
-                </span>
-
-
-            </div>
-
-
-            <div class="d-md-none col-md-4 col-sm-6 hidden-md-up mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fab fa-html5"></i>-->
-                    <ion-icon class="pb-4 pt-4 px-4 bg-light rounded-circle" name="logo-html5"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">HTML5</p>
-                </span>
-            </div>
-            <div class="d-md-none col-md-4 col-sm-6 hidden-md-up mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fab fa-css3-alt"></i>-->
-                    <ion-icon class="pb-4 pt-4 px-4 bg-light rounded-circle" name="logo-css3"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">CSS3</p>
-                </span>
-            </div>
-            <div class="d-md-none col-md-4 col-sm-6 hidden-md-up mt-5 text-center">
-                <span class=" fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fab fa-js"></i>-->
-                    <ion-icon class="pb-4 pt-4 px-4 bg-light rounded-circle" name="logo-javascript"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">JsvaScript</p>
-                </span>
-
-
-
-
-            </div>
-            <div class="d-md-none col-md-4 col-sm-6 hidden-md-up mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <i class="pb-4 pt-4 px-4 bg-light rounded-circle fab fa-react"></i>
-                    <p class="text-center text-dark mt-4 h3">ReactJS2</p>
-                </span>
-            </div>
-            <div class="d-md-none col-md-4 col-sm-6 hidden-md-up mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="py-3 px-4 bg-light rounded-circle fab fa-github"></i>-->
-                    <ion-icon class="py-4 px-4 bg-light rounded-circle" name="logo-github"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">GIT2</p>
-                </span>
-            </div>
-            <div class="d-md-none col-md-4 col-sm-6 hidden-md-up mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pt-3 pb-4 pr-4 pl-4 bg-light rounded-circle fab fa-wordpress-simple"></i>-->
-                    <ion-icon class="pt-4 pb-4 pr-4 pl-4 bg-light rounded-circle" name="logo-wordpress"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">WordPress2</p>
-                </span>
-            </div>
-
-
-
-            <div class="d-none col-md-4 col-sm-6 col-xs-12 d-md-block mt-5 text-center">
-                <span class="fa-4x  text-warning" aria-hidden="true">
-                    <i class="py-4 px-4 bg-light rounded-circle fab fa-react"></i>
-                    <p class="text-center text-dark mt-4 h3">ReactJS</p>
-                </span>
-            </div>
-            <div class="d-none col-md-4 col-sm-6 col-xs-12 d-md-block mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="py-3 px-4 bg-light rounded-circle fab fa-git"></i>-->
-                    <ion-icon class="py-4 px-4 bg-light rounded-circle" name="logo-github"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">GIT</p>
-                </span>
-            </div>
-            <div class="d-none col-md-4 col-sm-6 col-xs-12 d-md-block mt-5 text-center">
-                <span class="fa-4x text-warning" aria-hidden="true">
-                    <!--                    <i class="pt-3 pb-3 pr-3 pl-3 bg-light rounded-circle fab fa-wordpress"></i>-->
-                    <ion-icon class="pt-4 pb-4 pr-4 pl-4 bg-light rounded-circle" name="logo-wordpress"></ion-icon>
-                    <p class="text-center text-dark mt-4 h3">WordPress</p>
-                </span>
-            </div>
-
-        </div>
-    </div>
-
-
-    <script src="https://unpkg.com/ionicons@4.4.6/dist/ionicons.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
