--- a/index.html
+++ b/index.html
@@ -3,20 +3,159 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>Aleister Crowley</title>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/css/style.css">
+
+    <!-- Javascript -->
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+    <script async src="/js/animation.js"></script>
+    <script async src="/js/function.js"></script>
+    <script async src="/js/fetch.js"></script>
 </head>
 
 <body>
-
-    
-    <div id="bg"></div>
-        <div id="text-position">
-            <h3>I AM THE BEST</h3>
-            <h1>FRONT END DEVELOPER</h1>
+    <div class="nav-wrapper">
+        <div class="logo">
+            <div class="img-logo"></div>
+            <h1><a class="pdf-link" href="#" id="biography-link">Aleister<br>Crowley</a></h1>
         </div>
 
+        <nav>
+            <a href="#" id="anAutohagiography-link">
+                <div class="letter">A</div>
+                <div class="letter">n&nbsp</div>
+                <div class="letter">A</div>
+                <div class="letter">u</div>
+                <div class="letter">t</div>
+                <div class="letter">o</div>
+                <div class="letter">h</div>
+                <div class="letter">a</div>
+                <div class="letter">g</div>
+                <div class="letter">i</div>
+                <div class="letter">o</div>
+                <div class="letter">g</div>
+                <div class="letter">r</div>
+                <div class="letter">a</div>
+                <div class="letter">p</div>
+                <div class="letter">h</div>
+                <div class="letter">y</div>
+            </a>
+            <a href="#" class="active" id="theBookOfTheLaw-link">
+                <div class="letter">T</div>
+                <div class="letter">h</div>
+                <div class="letter">e&nbsp</div>
+                <div class="letter">B</div>
+                <div class="letter">o</div>
+                <div class="letter">o</div>
+                <div class="letter">k&nbsp</div>
+                <div class="letter">o</div>
+                <div class="letter">f&nbsp</div>
+                <div class="letter">t</div>
+                <div class="letter">h</div>
+                <div class="letter">e&nbsp</div>
+                <div class="letter">L</div>
+                <div class="letter">a</div>
+                <div class="letter">w</div>
+            </a>
+            <a href="#" id="moonchild-link">
+                <div class="letter">M</div>
+                <div class="letter">o</div>
+                <div class="letter">o</div>
+                <div class="letter">n</div>
+                <div class="letter">c</div>
+                <div class="letter">h</div>
+                <div class="letter">i</div>
+                <div class="letter">l</div>
+                <div class="letter">d</div>
+            </a>
+            <a href="#" id="theBookOfTheLies-link">
+                <div class="letter">T</div>
+                <div class="letter">h</div>
+                <div class="letter">e&nbsp</div>
+                <div class="letter">B</div>
+                <div class="letter">o</div>
+                <div class="letter">o</div>
+                <div class="letter">k&nbsp</div>
+                <div class="letter">o</div>
+                <div class="letter">f&nbsp</div>
+                <div class="letter">t</div>
+                <div class="letter">h</div>
+                <div class="letter">e&nbsp</div>
+                <div class="letter">L</div>
+                <div class="letter">i</div>
+                <div class="letter">e</div>
+                <div class="letter">s</div>
+            </a>
+        </nav>
+    </div>
+
+    <div class="column-wrapper">
+        <section class="text-section new-content" id="index-link">
+            <h1>Edward<br> Alexander Crowley<br>
+                <p class="year-aleister">(12 October 1875 –<br> 1 December 1947)</p>
+            </h1>
+
+            <p>
+                “The joy of life consists in the exercise of one's energies, continual growth, constant change, the enjoyment of every new experience. To stop means simply to die. The eternal mistake of mankind is to set up an attainable ideal.”
+            </p>
+
+            <div class="details-btn">
+                <a class="pdf-link" href="https://en.wikipedia.org/wiki/Aleister_Crowley">Wikipedia</a>
+                <img src="/img/plus.png" alt="Plus Icon">
+            </div>
+        </section>
+
+        <section class="image-section section-img-first">
+            <div class="gallery-counter">
+                <div id="gallery-loader">
+                    <h2>01</h2>
+                    <div class="loader">
+                        <div class="loader-line"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sidebar-section">
+            <div class="hamburger">
+                <div class="ham-line"></div>
+                <div class="ham-line" id="short"></div>
+                <div class="ham-line"></div>
+            </div>
+
+            <div class="social">
+                <a href="http://facebook.com">
+                    <div class="letter">f</div>
+                    <div class="letter">a</div>
+                    <div class="letter">c</div>
+                    <div class="letter">e</div>
+                    <div class="letter">b</div>
+                    <div class="letter">o</div>
+                    <div class="letter">o</div>
+                    <div class="letter">k</div>
+                </a>
+                <a href="http://twitter.com">
+                    <div class="letter">t</div>
+                    <div class="letter">w</div>
+                    <div class="letter">i</div>
+                    <div class="letter">t</div>
+                    <div class="letter">t</div>
+                    <div class="letter">e</div>
+                    <div class="letter">r</div>
+                </a>
+            </div>
+        </section>
+    </div>
+
+    <div class="gallery-nav">
+        <div id="yellow-bg">
+            <img src="/img/arrow.png" alt="Arrow Icon">
+        </div>
+        <div id="white-bg">
+            <img src="/img/arrow.png" alt="Arrow Icon">
+        </div>
+    </div>
 </body>
 
 </html>
