--- a/anAutohagiography.html
+++ b/anAutohagiography.html
@@ -2,14 +2,15 @@
 	<section class="text-section">
 		<h1 id="col-baby">The Confessions<br> of<br> Aleister Crowley</h1>
 		<p>
-			“The joy of life consists in the exercise of one's energies, continual growth, constant change, the enjoyment of every new experience. To stop means simply to die. The eternal mistake of mankind is to set up an attainable ideal.”
-			</p>
+			“The joy of life consists in the exercise of one's energies, continual growth, constant change, the enjoyment of
+			every new experience. To stop means simply to die. The eternal mistake of mankind is to set up an attainable ideal.”
+		</p>
 
 		<div class="details-btn">
 			<a class="pdf-link" href="http://www.metaphysicspirit.com/books/Confessions%20of%20Aleister%20Crowley.pdf">Read book</a>
 			<img src="/img/plus.png" alt="Plus Icon">
 		</div>
-		
+
 	</section>
 
 	<section class="image-section section-img-second">
@@ -17,21 +18,23 @@
 			<div id="gallery-loader">
 				<h2>02</h2>
 				<div class="loader">
-					<div class="loader-line"></div>
+					<div class="loader-line" id="line-second-img"></div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="sidebar-section">
-		<div class="hamburger">
-			<div class="ham-line"></div>
-			<div class="ham-line" id="short"></div>
-			<div class="ham-line"></div>
-		</div>
+            <a href="https://github.com/nobodywd5/nobodywd5.github.io">
+            <div class="hamburger">
+                <div class="ham-line ham-line-first"></div>
+                <div class="ham-line ham-line-second" id="short"></div>
+                <div class="ham-line ham-line-third"></div>
+            </div>
+        </a>
 
 		<div class="social">
-			<a href="http://facebook.com">
+			<a href="https://www.facebook.com/profile.php?id=100014942411258">
 				<div class="letter">f</div>
 				<div class="letter">a</div>
 				<div class="letter">c</div>
