--- a/biography.html
+++ b/biography.html
@@ -5,7 +5,9 @@
         </h1>
 
         <p>
-            “The joy of life consists in the exercise of one's energies, continual growth, constant change, the enjoyment of every new experience. To stop means simply to die. The eternal mistake of mankind is to set up an attainable ideal.”
+            “The joy of life consists in the exercise of one's energies, continual growth, constant change, the
+            enjoyment of every new experience. To stop means simply to die. The eternal mistake of mankind is to set up
+            an attainable ideal.”
         </p>
 
         <div class="details-btn">
@@ -19,21 +21,23 @@
             <div id="gallery-loader">
                 <h2>01</h2>
                 <div class="loader">
-                    <div class="loader-line"></div>
+                    <div class="loader-line" id="line-first-img"></div>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="sidebar-section">
-        <div class="hamburger">
-            <div class="ham-line"></div>
-            <div class="ham-line" id="short"></div>
-            <div class="ham-line"></div>
-        </div>
+            <a href="https://github.com/nobodywd5/nobodywd5.github.io">
+            <div class="hamburger">
+                <div class="ham-line ham-line-first"></div>
+                <div class="ham-line ham-line-second" id="short"></div>
+                <div class="ham-line ham-line-third"></div>
+            </div>
+        </a>
 
         <div class="social">
-            <a href="http://facebook.com">
+            <a href="https://www.facebook.com/profile.php?id=100014942411258">
                 <div class="letter">f</div>
                 <div class="letter">a</div>
                 <div class="letter">c</div>
