--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <title>Aleister Crowley</title>
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/text-section.css">
+    <link rel="stylesheet" href="css/image-section.css">
+    <link rel="stylesheet" href="css/sidebar-section.css">
 
     <!-- Javascript -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
@@ -18,11 +22,11 @@
     <div class="nav-wrapper">
         <div class="logo">
             <div class="img-logo"></div>
-            <h1><a class="pdf-link" href="#" id="biography-link">Aleister<br>Crowley</a></h1>
+            <h1><a class="pdf-link-logo" href="#" id="biography-link">Aleister<br>Crowley</a></h1>
         </div>
 
         <nav>
-            <a href="#" id="anAutohagiography-link">
+            <a href="#" class="active" id="anAutohagiography-link">
                 <div class="letter">A</div>
                 <div class="letter">n&nbsp</div>
                 <div class="letter">A</div>
@@ -41,7 +45,7 @@
                 <div class="letter">h</div>
                 <div class="letter">y</div>
             </a>
-            <a href="#" class="active" id="theBookOfTheLaw-link">
+            <a href="#" id="theBookOfTheLaw-link">
                 <div class="letter">T</div>
                 <div class="letter">h</div>
                 <div class="letter">e&nbsp</div>
@@ -97,7 +101,9 @@
             </h1>
 
             <p>
-                “The joy of life consists in the exercise of one's energies, continual growth, constant change, the enjoyment of every new experience. To stop means simply to die. The eternal mistake of mankind is to set up an attainable ideal.”
+                “The joy of life consists in the exercise of one's energies, continual growth, constant change, the
+                enjoyment of every new experience. To stop means simply to die. The eternal mistake of mankind is to
+                set up an attainable ideal.”
             </p>
 
             <div class="details-btn">
@@ -111,21 +117,23 @@
                 <div id="gallery-loader">
                     <h2>01</h2>
                     <div class="loader">
-                        <div class="loader-line"></div>
+                        <div class="loader-line" id="line-first-img"></div>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="sidebar-section">
+            <a href="https://github.com/nobodywd5/nobodywd5.github.io">
             <div class="hamburger">
-                <div class="ham-line"></div>
-                <div class="ham-line" id="short"></div>
-                <div class="ham-line"></div>
+                <div class="ham-line ham-line-first"></div>
+                <div class="ham-line ham-line-second" id="short"></div>
+                <div class="ham-line ham-line-third"></div>
             </div>
+        </a>
 
             <div class="social">
-                <a href="http://facebook.com">
+                <a href="https://www.facebook.com/profile.php?id=100014942411258">
                     <div class="letter">f</div>
                     <div class="letter">a</div>
                     <div class="letter">c</div>
@@ -146,15 +154,6 @@
                 </a>
             </div>
         </section>
-    </div>
-
-    <div class="gallery-nav">
-        <div id="yellow-bg">
-            <img src="/img/arrow.png" alt="Arrow Icon">
-        </div>
-        <div id="white-bg">
-            <img src="/img/arrow.png" alt="Arrow Icon">
-        </div>
     </div>
 </body>
 
