--- a/moonchild.html
+++ b/moonchild.html
@@ -1,12 +1,15 @@
 <div class="column-wrapper new-content">
     <section class="text-section">
-        <h1 id="col-baby">Moonchild<p class="year-aleister">(novel)</p></h1>
+        <h1 id="col-baby">Moonchild<p class="year-aleister">(novel)</p>
+        </h1>
         <p>
-            “Thus each step in sorcery is also a step in slavery; and that any man should put such power in the hands of another, no matter for what hope of gain, is one of the mysteries of perverse psychology.”
+            “Thus each step in sorcery is also a step in slavery; and that any man should put such power in the hands
+            of another, no matter for what hope of gain, is one of the mysteries of perverse psychology.”
         </p>
 
         <div class="details-btn">
-            <a class="pdf-link" href="http://www.thule-italia.net/esoterismo/Aleister%20Crowley/crowley,%20aleister%20-%20moonchild.pdf">Read book</a>
+            <a class="pdf-link" href="http://www.thule-italia.net/esoterismo/Aleister%20Crowley/crowley,%20aleister%20-%20moonchild.pdf">Read
+                book</a>
             <img src="/img/plus.png" alt="Plus Icon">
         </div>
     </section>
@@ -16,21 +19,23 @@
             <div id="gallery-loader">
                 <h2>04</h2>
                 <div class="loader">
-                    <div class="loader-line"></div>
+                    <div class="loader-line" id="line-fourth-img"></div>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="sidebar-section">
-        <div class="hamburger">
-            <div class="ham-line"></div>
-            <div class="ham-line" id="short"></div>
-            <div class="ham-line"></div>
-        </div>
+            <a href="https://github.com/nobodywd5/nobodywd5.github.io">
+            <div class="hamburger">
+                <div class="ham-line ham-line-first"></div>
+                <div class="ham-line ham-line-second" id="short"></div>
+                <div class="ham-line ham-line-third"></div>
+            </div>
+        </a>
 
         <div class="social">
-            <a href="http://facebook.com">
+            <a href="https://www.facebook.com/profile.php?id=100014942411258">
                 <div class="letter">f</div>
                 <div class="letter">a</div>
                 <div class="letter">c</div>
