--- a/theBookOfTheLaw.html
+++ b/theBookOfTheLaw.html
@@ -1,11 +1,13 @@
 <div class="column-wrapper new-content">
 	<section class="text-section">
-		<h1 id="col-baby">Liber AL vel Legis<p class="year-aleister">(original)</p></h1>
+		<h1 id="col-baby">Liber AL vel Legis<p class="year-aleister">(original)</p>
+		</h1>
 		<p>
-		“Remember all ye that existence is pure joy; that all the sorrows are but as shadows; they pass & are done; but there is that which remains.”
+			“Remember all ye that existence is pure joy; that all the sorrows are but as shadows; they pass & are done; but
+			there is that which remains.”
 		</p>
 
-			<div class="details-btn">
+		<div class="details-btn">
 			<a class="pdf-link" href="http://www.rahoorkhuit.net/library/libers/pdf/lib_0220b.pdf">Read book</a>
 			<img src="/img/plus.png" alt="Plus Icon">
 		</div>
@@ -16,21 +18,23 @@
 			<div id="gallery-loader">
 				<h2>03</h2>
 				<div class="loader">
-					<div class="loader-line"></div>
+					<div class="loader-line" id="line-third-img"></div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="sidebar-section">
-		<div class="hamburger">
-			<div class="ham-line"></div>
-			<div class="ham-line" id="short"></div>
-			<div class="ham-line"></div>
-		</div>
+            <a href="https://github.com/nobodywd5/nobodywd5.github.io">
+            <div class="hamburger">
+                <div class="ham-line ham-line-first"></div>
+                <div class="ham-line ham-line-second" id="short"></div>
+                <div class="ham-line ham-line-third"></div>
+            </div>
+        </a>
 
 		<div class="social">
-			<a href="http://facebook.com">
+			<a href="https://www.facebook.com/profile.php?id=100014942411258">
 				<div class="letter">f</div>
 				<div class="letter">a</div>
 				<div class="letter">c</div>
